# sem7prac

./: .gitmodules  README.md
task1/: Addons.xcu  Makefile  ProtocolHandler.xcu  addon.cxx  addon.hxx  component.cxx  transp_part.cxx  transp_part.hxx
task3/: CMakeLists.txt  library.cpp  library.h  main.cpp
task3/Test/: test.cpp
task4/: CMakeLists.txt  main.cpp
task4/Script/: script.py
task4/Script/series0_run0/: series_0_run_0_sol.txt  series_0_run_0_sol_after100.txt  series_0_run_0_time.txt
task4/Script/series0_run1/: series_0_run_1_sol.txt  series_0_run_1_sol_after100.txt  series_0_run_1_time.txt
task4/Script/series0_run2/: series_0_run_2_sol.txt  series_0_run_2_sol_after100.txt  series_0_run_2_time.txt
task4/Script/series0_run3/: series_0_run_3_sol.txt  series_0_run_3_sol_after100.txt  series_0_run_3_time.txt
task4/Script/series0_run4/: series_0_run_4_sol.txt  series_0_run_4_sol_after100.txt  series_0_run_4_time.txt
task4/Script/series0_run5/: series_0_run_5_sol.txt  series_0_run_5_sol_after100.txt  series_0_run_5_time.txt
task4/Script/series0_run6/: series_0_run_6_sol.txt  series_0_run_6_sol_after100.txt  series_0_run_6_time.txt
task4/Script/series0_run7/: series_0_run_7_sol.txt  series_0_run_7_sol_after100.txt  series_0_run_7_time.txt
task4/Script/series0_run8/: series_0_run_8_sol.txt  series_0_run_8_sol_after100.txt  series_0_run_8_time.txt
task4/Script/series0_run9/: series_0_run_9_sol.txt  series_0_run_9_sol_after100.txt  series_0_run_9_time.txt
task4/Script/series1_run0/: series_1_run_0_sol.txt  series_1_run_0_sol_after100.txt  (+1 more)
(+267 files in other folders)
